applications/software/home1/servarr/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: sonarr
        image: mirror.gcr.io/linuxserver/sonarr:4.0.17@sha256:0b5c4803f92456fb9b65bae8375716ea120b4ea17b3cced7da32b63f0085782b
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/sonarr
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /tank/servarr
          type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: radarr
        image: mirror.gcr.io/linuxserver/radarr:6.1.1@sha256:c0a4335d4249b46102f64cf6fa27ffc3bddfd9138fac1e4ddf238afd37f02d1f
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/radarr
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /tank/servarr
          type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: prowlarr
        image: mirror.gcr.io/linuxserver/prowlarr:2.3.5@sha256:2489c6dbaf11e3a6d71aeb2e6980d04193d4af611aa7064a974851222fd41722
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/prowlarr
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nvidia-device-plugin-daemonset
spec:
  selector:
    matchLabels:
      name: nvidia-device-plugin-ds
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: nvidia-device-plugin-ds
    spec:
      runtimeClassName: nvidia
      priorityClassName: system-node-critical
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - image: nvcr.io/nvidia/k8s-device-plugin:v0.19.2@sha256:32e1bdf5b45f6ccf7389d9e3ff98f569fa7063c562f5376f478bd4b1fe1a4aa6
        name: nvidia-device-plugin-ctr
        resources:
          requests:
            cpu: 50m
            memory: 10Mi
          limits:
            cpu: 50m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
        volumeMounts:
        - name: device-plugin
          mountPath: /var/lib/kubelet/device-plugins
      volumes:
      - name: device-plugin
        hostPath:
          path: /var/lib/kubelet/device-plugins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      runtimeClassName: nvidia
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      terminationGracePeriodSeconds: 1
      containers:
      - name: jellyfin
        image: mirror.gcr.io/linuxserver/jellyfin:10.11.8@sha256:e622a48adf7193c7d626c2325a40f9b01c932c8e7bf3f50ffa40e7e9b6ce1d39
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 3000m
            memory: 5Gi
            nvidia.com/gpu: 1
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/jellyfin
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /tank/servarr
          type: Directory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: jellyseerr
        image: ghcr.io/seerr-team/seerr:v3.3.0@sha256:c92d2dc117f62185e7bcb88cd56efd374ea79210eaf433275449e8d5988eb5a8
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/jellyseerr
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:v3.5.0@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
        ports:
        - containerPort: 8191
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        location: home1
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      containers:
      - name: bazarr
        image: mirror.gcr.io/linuxserver/bazarr:1.5.6@sha256:4b5e510042bf471c8bafab89cada9774fba2fb25f16ec64235151cacbe847c10
        ports:
        - containerPort: 6767
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-tv
          mountPath: /tv
        - name: media-movies
          mountPath: /movies
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: config
        hostPath:
          path: /tank/servarr/config/bazarr
          type: DirectoryOrCreate
      - name: media-tv
        hostPath:
          path: /tank/servarr/media/tv
          type: DirectoryOrCreate
      - name: media-movies
        hostPath:
          path: /tank/servarr/media/movies
          type: DirectoryOrCreate
