applications/software/home1/servarr/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "jellyfin.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyfin
      port: 80
      weight: 1
    timeouts:
      request: 0s
      backendRequest: 0s
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "jellyseerr.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyseerr
      port: 80
      weight: 1
    timeouts:
      request: 0s
      backendRequest: 0s
    matches:
    - path:
        type: PathPrefix
        value: /
